# Football-team-database

./: CMakeLists.txt  README.md  main.cpp
Headers/: Account.cpp  Account.h  Admin.cpp  Admin.h  Authorization.cpp  Authorization.h  Birthday.cpp  Birthday.h  Database.cpp  Database.h  Player.cpp  Player.h  Protect.cpp  Protect.h  User.cpp  User.h
bprinter-master/src/: table_printer.cpp
